first index version

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,9 +2,17 @@ en:
   author_name: "Luis Osnet"
   owner_name: "Paola Valdez"
   job: "Marketing"
-  main_description: "Mi nombre es Paola Valdez"
-  description: "Soy una sexy mercadologa así como lo decia mi perfil de tinder"
   hello: "Hi!"
+  main_description: "This is Paola Valdez"
+  description: "Currently my portfolio is in development phase, soon you will have more news about me."
+  read_more: "Read more"
+  about_me: "about me"
+  or: "or"
+  my_projects: "my projects"
+  contact_me: "contact me"
+  freelance: "I’m available for freelancing, feel free to contacta me!"
+  email: "Email"
+  email_address: "hello@paolavaldez.com"
   # navbar
   menu:
     home: "Home"
