--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2,9 +2,17 @@ es:
   author_name: "Luis Osnet"
   owner_name: "Paola Valdez"
   job: "Marketing"
-  main_description: "Mi nombre es Paola Valdez"
-  description: "Soy una sexy mercadologa así como lo decia mi perfil de tinder"
   hello: "Hola!"
+  main_description: "Mi nombre es Paola Valdez"
+  description: "Actualmente mi portafolio esta en fase de desarrollo, pronto tendrás mas noticias sobre mi."
+  read_more: "Saber más"
+  about_me: "sobre mi"
+  or: "o"
+  my_projects: "mis proyectos"
+  contact_me: "contactarme"
+  freelance: "¡Estoy disponible como freelance, no dudes en contactarme!"
+  email: "Email"
+  email_address: "hola@paolavaldez.com"
   # menu
   home: "Inicio"
   about: "Sobre mi"
