changed email based on language

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,7 @@ en:
   or: "or"
   my_projects: "my projects"
   contact_me: "contact me"
-  freelance: "I’m available for freelancing, feel free to contacta me!"
+  freelance: "I’m available for freelancing, feel free to"
   email: "Email"
   email_address: "hello@paolavaldez.com"
   # navbar
