--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -10,7 +10,7 @@ es:
   or: "o"
   my_projects: "mis proyectos"
   contact_me: "contactarme"
-  freelance: "¡Estoy disponible como freelance, no dudes en contactarme!"
+  freelance: "¡Estoy disponible como freelance, no dudes en"
   email: "Email"
   email_address: "hola@paolavaldez.com"
   # menu
